--- a/StyleLogin.css
+++ b/StyleLogin.css
@@ -1,165 +1,164 @@
-     body {
-        margin: 0;
-        font-family: Arial, sans-serif;
-        background-color: #f2f2f2;
-    }
-    .navbar {
-        display: flex;
-        align-items: center;
-        padding: 10px;
-        background-color: #f8f9fa;
-        border-bottom: 1px solid #ccc;
-        height: 50px;
-    }
-    
-    .navbar a:first-of-type {
-        margin-left: auto;
-    }
-    .navbar a {
-        text-decoration: none;
-        color: black;
-        margin: -300px 10px;
-    }
-    .navbar .log{
-        text-align: center;
-        width: 80px;
-        height: 30px;
-        padding-top: 9px;
-        align-items: center;
-        border:2px solid #378BA4;
-        background-color: #378BA4;
-        border-radius: 5px;
-    }
+body {
+    margin: 0;
+    font-family: Arial, sans-serif;
+    background-color: #f2f2f2;
+}
+.navbar {
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    background-color: #f8f9fa;
+    border-bottom: 1px solid #ccc;
+    height: 50px;
+}
+.navbar a:first-of-type {
+    margin-left: auto;
+}
+.navbar a {
+    text-decoration: none;
+    color: black;
+    margin: 0 10px;
+}
+.navbar .log {
+    text-align: center;
+    width: 80px;
+    height: 30px;
+    padding-top: 9px;
+    align-items: center;
+    border: 2px solid #378BA4;
+    background-color: #378BA4;
+    border-radius: 5px;
+}
 
-    .navbar .log a{
-        padding-top: -30px;
-    }
+.logo {
+    height: 200px;
+    width: 600px;
+    background-image: url('image/WashWise-removebg-preview.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    margin-left: -200px;
+}
 
-    .logo {
-        height: 200px;
-        width: 600px;
-        background-image: url('image/WashWise-removebg-preview.png');
-        background-size: contain;
-        background-repeat: no-repeat;
-        background-position: center;
-        margin-left: -200px;
-    }
+.her {
+    margin: 0;
+    padding: 0;
+    top: 0;
+    width: 100%;
+    height: 89.3vh;
+    background: url(image/car.png) no-repeat center center fixed;
+    background-size: cover;
+    position: relative;
+    display: flex;
+}
 
-    
-    
-    .her{
-        margin: 0;
-        padding: 0;
-        top: 0;
-        width: 100%;
-        height: 89.3vh;
-        background: url(image/car.png) no-repeat center center fixed;
-        background-size: cover;
-        position: relative;
-        display: flex;
-    }
+.gh.active {
+    display: block;
+}
 
+.gh {
+    width: 420px;
+    height: 430px;
+    background: transparent;
+    border: 2px solid black;
+    color: black;
+    border-radius: 10px;
+    padding: 30px 40px;
+    text-align: center;
+    margin: 50px auto; /* This centers the form horizontally */
+    backdrop-filter: blur(50px);
+    display: none;
+    position: absolute; /* Add this */
+    left: 50%; /* Add this */
+    transform: translateX(-50%);
+}
 
-    .gh{
-        width: 420px ;
-        height: 430px;
-        background:transparent;
-        border: 2px solid black;
-        color: black;
-        border-radius: 10px;
-        padding: 30px 40px;
-        text-align: center;
-        margin: 50px auto; 
-        backdrop-filter: blur(50px);
+#gh2 {
+    width: 420px;
+    height: 430px;
+    background: transparent;
+    border: 2px solid black;
+    color: black;
+    border-radius: 10px;
+    padding: 30px 40px;
+    text-align: center;
+    margin: 50px auto;
+    backdrop-filter: blur(50px);
+}
 
-    }
+h1 {
+    font-size: 36px;
+    text-align: center;
+}
 
-    .gh h1{
-        font-size: 36px;
-        text-align: center;
-    }
+.Input {
+    position: relative;
+    height: 10px;
+    width: 80%;
+    margin: 50px 0;
+}
 
-    .gh .Input{
-        position: relative;
-        height: 10px;
-        width: 80%;
-        margin: 50px 0;
-   
-    }
+.Input input {
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    outline: none;
+    color: black;
+    border: none;
+    border-bottom: 2px solid whitesmoke;
+    padding: 20px 45px 20px 20px;
+    font-weight: bold;
+    font-size: 15px;
+}
 
-    .Input input{
-        width: 100%;
-        height: 100%;
-        background: transparent;
-        outline: none;
-        color: black;
-        border-top: none;
-        border-left: none;
-        border-right: none ;
-        border-bottom: 2px solid whitesmoke;
-        padding: 20px 45px 20px 20px;
-        font-weight: bold;
-        font-size: 15px;
-    }
+.Input ::placeholder {
+    color: black;
+    font-weight: bold;
+    font-size: 15px;
+}
 
-    .Input ::placeholder{
-        color: black;
-        font-weight: bold;
-        font-size: 15px;
-    }
+.Input i {
+    position: absolute;
+    right: -55px;
+    top: 25%;
+    font-size: 25px;
+}
 
-    .Input i{
-        position:absolute;
-        right: -55px;
-        top: 25%;
-        font-size: 25px;
-    }
+.rem, .reg {
+    font-weight: bold;
+    font-size: 15px;
+}
 
-    .gh .rem{
-        display:flex;
-        justify-content: space-between;
-        margin: 15px 0 15px;
-        font-weight: bold;
-        font-size: 15px;
-    }
+.rem {
+    display: flex;
+    justify-content: space-between;
+    margin: 15px 0;
+}
 
-    .gh .rem a{
-        color: black;
-        text-decoration: none;
-    }
+.rem a, .reg a {
+    color: black;
+    text-decoration: none;
+}
 
-    .gh .rem a:hover{ 
-        text-decoration: underline;
-    }
+.rem a:hover, .reg a:hover {
+    text-decoration: underline;
+}
 
-    .gh .reg{
-        font-weight: bold;
-        font-size: 15px;
-    }
+.btn0 {
+    height: 45px;
+    width: 96%;
+    margin: 50px 0;
+    background: #378BA4;
+    outline: none;
+    border: 2px solid black;
+    border-radius: 40px;
+    display: block;
+    font-weight: bold;
+    font-size: 20px;
+}
 
-    .gh .reg a{
-        color: black;
-        text-decoration: none;
-    }
-
-    .gh .reg a:hover{
-        text-decoration: underline;
-    }
-    
-    .btn0 {
-        height: 45px;
-        width: 96%;
-        margin: 50px 0;
-        background:#378BA4;
-        outline: none;
-        border: 2px solid black;
-        border-radius: 40px;
-        display: block; 
-        font-weight: bold;
-        font-size: 20px;   
-      }
-      #message {
-        margin-top: 1rem;
-        text-align: center;
-        font-weight: bold;
-      }
+#message {
+    margin-top: 1rem;
+    text-align: center;
+    font-weight: bold;
+}
