--- a/StyleSignUp.css
+++ b/StyleSignUp.css
@@ -1,7 +1,16 @@
 body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
     margin: 0;
+    width: 100%;
+    height: 89.3vh;
     font-family: Arial, sans-serif;
     background-color: #f2f2f2;
+    background: url(image/car.png) no-repeat center center fixed;
+    background-size: cover;
+
 }
 .navbar {
     display: flex;
@@ -10,6 +19,8 @@ body {
     background-color: #f8f9fa;
     border-bottom: 1px solid #ccc;
     height: 50px;
+    width: 98.9%;
+    margin-right: 1100px;
 }
 
 .navbar a:first-of-type {
@@ -46,19 +57,28 @@ body {
 }
 
 .her{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    justify-content: center;
     margin: 0;
     padding: 0;
     top: 0;
-    width: 100%;
-    height: 89.3vh;
-    background: url(image/car.png) no-repeat center center fixed;
-    background-size: cover;
     position: relative;
-    display: flex;
+
 }
 
 
 .gh{
+    display: none;
+}
+.gh.active{
+    display: block;
+}
+
+#gh1{
+    margin: 20px auto;
     width: 420px ;
     height: max-content;
     background:transparent;
@@ -66,24 +86,49 @@ body {
     color: black;
     border-radius: 10px;
     padding: 0px 40px;
-    text-align: center;
-    margin: 50px auto; 
+    text-align: center; 
     backdrop-filter: blur(50px);
 
 }
 
-.gh h1{
+#gh2{
+    margin: 20px auto;
+    width: 420px ;
+    height: max-content;
+    background:transparent;
+    border: 2px solid black;
+    color: black;
+    border-radius: 10px;
+    padding: 0px 40px;
+    text-align: center; 
+    backdrop-filter: blur(50px);
+
+}
+
+#gh1 h1{
+    font-size: 36px;
+    text-align: center;
+}
+#gh2 h1{
     font-size: 36px;
     text-align: center;
 }
 
-.gh .Input{
+#gh1 .Input{
     position: relative;
     height: 10px;
     width: 80%;
     margin: 50px 0;
-
 }
+
+#gh2 .Input{
+    position: relative;
+    height: 10px;
+    width: 80%;
+    margin: 50px 0;
+}
+
+
 
 .Input input{
     width: 100%;
@@ -128,7 +173,7 @@ select{
     font-size: 25px;
 }
 
-.gh .rem{
+#gh1 .rem{
     display:flex;
     justify-content: space-between;
     margin: 15px 0 15px;
@@ -136,26 +181,57 @@ select{
     font-size: 15px;
 }
 
-.gh .rem a{
-    color: black;
-    text-decoration: none;
-}
-
-.gh .rem a:hover{ 
-    text-decoration: underline;
-}
-
-.gh .reg{
+#gh2 .rem{
+    display:flex;
+    justify-content: space-between;
+    margin: 15px 0 15px;
     font-weight: bold;
     font-size: 15px;
 }
 
-.gh .reg a{
+#gh1 .rem a{
     color: black;
     text-decoration: none;
 }
 
-.gh .reg a:hover{
+#gh2 .rem a{
+    color: black;
+    text-decoration: none;
+}
+
+#gh1 .rem a:hover{ 
+    text-decoration: underline;
+}
+
+#gh2 .rem a:hover{ 
+    text-decoration: underline;
+}
+
+#gh1 .reg{
+    font-weight: bold;
+    font-size: 15px;
+}
+
+#gh2 .reg{
+    font-weight: bold;
+    font-size: 15px;
+}
+
+#gh1 .reg a{
+    color: black;
+    text-decoration: none;
+}
+
+#gh2 .reg a{
+    color: black;
+    text-decoration: none;
+}
+
+#gh1 .reg a:hover{
+    text-decoration: underline;
+}
+
+#gh2 .reg a:hover{
     text-decoration: underline;
 }
 
@@ -171,6 +247,28 @@ select{
     font-weight: bold;
     font-size: 20px;   
   }
+
+  .button01 {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+/* Add User button */
+.btn1 {
+    width: 200px;
+    padding: 12px;
+    background: #378BA4;
+    border: 2px solid black;
+    border-radius: 40px;
+    font-weight: bold;
+    font-size: 20px;
+    width: 200px;
+    margin: 20px 0;
+    text-align: center; /* Center button text */
+    padding-left: 0; /* Remove left padding */
+}
+
   .error_message {
     margin-top: 1rem;
     text-align: center;
