--- a/StyleLogin.css
+++ b/StyleLogin.css
@@ -33,7 +33,7 @@ body {
 .logo {
     height: 200px;
     width: 600px;
-    background-image: url('image/WashWise-removebg-preview.png');
+    background-image: url('WashWise-removebg-preview.png');
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
@@ -46,7 +46,7 @@ body {
     top: 0;
     width: 100%;
     height: 89.3vh;
-    background: url(image/car.png) no-repeat center center fixed;
+    background: url(car.png) no-repeat center center fixed;
     background-size: cover;
     position: relative;
     display: flex;
