--- a/Style_about.css
+++ b/Style_about.css
@@ -37,7 +37,7 @@ body {
 .logo {
   height: 200px;
   width: 600px;
-  background-image: url('image/WashWise-removebg-preview.png');
+  background-image: url('WashWise-removebg-preview.png');
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
@@ -52,7 +52,7 @@ body {
     top: 0;
     width: 100%;
     height: 89vh;
-    background: url(image/car.png) no-repeat center center fixed;
+    background: url(car.png) no-repeat center center fixed;
     background-size: cover;
     position: relative;
     display: flex;
