--- a/StyleSignUp.css
+++ b/StyleSignUp.css
@@ -249,14 +249,14 @@ select{
   }
 
   .button01 {
-    width: 100%;
+    width: max-content;
     display: flex;
     justify-content: center;
 }
 
 /* Add User button */
 .btn1 {
-    width: 200px;
+    width: max-content;
     padding: 12px;
     background: #378BA4;
     border: 2px solid black;
