--- a/StyleSignUp.css
+++ b/StyleSignUp.css
@@ -69,15 +69,7 @@ body {
 
 }
 
-
 .gh{
-    display: none;
-}
-.gh.active{
-    display: block;
-}
-
-#gh1{
     margin: 20px auto;
     width: 420px ;
     height: max-content;
@@ -91,42 +83,21 @@ body {
 
 }
 
-#gh2{
-    margin: 20px auto;
-    width: 420px ;
-    height: max-content;
-    background:transparent;
-    border: 2px solid black;
-    color: black;
-    border-radius: 10px;
-    padding: 0px 40px;
-    text-align: center; 
-    backdrop-filter: blur(50px);
 
-}
 
-#gh1 h1{
-    font-size: 36px;
-    text-align: center;
-}
-#gh2 h1{
+.gh h1{
     font-size: 36px;
     text-align: center;
 }
 
-#gh1 .Input{
+.gh .Input{
     position: relative;
     height: 10px;
     width: 80%;
     margin: 50px 0;
 }
 
-#gh2 .Input{
-    position: relative;
-    height: 10px;
-    width: 80%;
-    margin: 50px 0;
-}
+
 
 
 
@@ -173,7 +144,7 @@ select{
     font-size: 25px;
 }
 
-#gh1 .rem{
+.gh .rem{
     display:flex;
     justify-content: space-between;
     margin: 15px 0 15px;
@@ -181,59 +152,34 @@ select{
     font-size: 15px;
 }
 
-#gh2 .rem{
-    display:flex;
-    justify-content: space-between;
-    margin: 15px 0 15px;
+
+
+.gh .rem a{
+    color: black;
+    text-decoration: none;
+}
+
+
+.gh .rem a:hover{ 
+    text-decoration: underline;
+}
+
+.gh .reg{
     font-weight: bold;
     font-size: 15px;
 }
 
-#gh1 .rem a{
+
+.gh .reg a{
     color: black;
     text-decoration: none;
 }
 
-#gh2 .rem a{
-    color: black;
-    text-decoration: none;
-}
 
-#gh1 .rem a:hover{ 
+.gh .reg a:hover{
     text-decoration: underline;
 }
 
-#gh2 .rem a:hover{ 
-    text-decoration: underline;
-}
-
-#gh1 .reg{
-    font-weight: bold;
-    font-size: 15px;
-}
-
-#gh2 .reg{
-    font-weight: bold;
-    font-size: 15px;
-}
-
-#gh1 .reg a{
-    color: black;
-    text-decoration: none;
-}
-
-#gh2 .reg a{
-    color: black;
-    text-decoration: none;
-}
-
-#gh1 .reg a:hover{
-    text-decoration: underline;
-}
-
-#gh2 .reg a:hover{
-    text-decoration: underline;
-}
 
 .btn0 {
     height: 45px;
@@ -252,21 +198,6 @@ select{
     width: max-content;
     display: flex;
     justify-content: center;
-}
-
-/* Add User button */
-.btn1 {
-    width: max-content;
-    padding: 12px;
-    background: #378BA4;
-    border: 2px solid black;
-    border-radius: 40px;
-    font-weight: bold;
-    font-size: 20px;
-    width: 200px;
-    margin: 20px 0;
-    text-align: center; /* Center button text */
-    padding-left: 0; /* Remove left padding */
 }
 
   .error_message {
