--- a/Style_dash.css
+++ b/Style_dash.css
@@ -1,6 +1,5 @@
 body{
     background-color: #2b5b97;
-    height: 870px;
 }
 
 header{
@@ -14,18 +13,39 @@ header{
     width: 99.9%;
 }
 
+.navbar {
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    background-color: #f8f9fa;
+    height: 50px;
+}
+
+.navbar a {
+    text-decoration: none;
+    color: black;
+    margin: 0 -1350px;
+    font-size: 25px;
+}
 
 .logo {
     height: 200px;
     width: 600px;
     top: 30px;
-    left: -500px;
+    left: 20px;
     background-image: url('WashWise-removebg-preview.png');
     background-size: contain;
     background-repeat: no-repeat;
-    margin-left: 0px;
+    margin-left: 780px;
 }
 
+section{
+    align-items: center;
+    margin-top: 50px;
+    margin-left: 50px;
+    margin-right: 50px;
+
+}
 .gh {
     width: 420px;
     height: max-content;
@@ -42,70 +62,51 @@ header{
     left: 50%;
     transform: translateX(-50%);
 }
-
-.profile-photo {
-    width: 100px;
-    height: 100px;
-    background-color: #e0e0e0;
-    border-radius: 50%;
-    margin: 0 auto;
-  }
-
-  .add-photo {
-    margin: 8px 0 20px;
-    font-size: 14px;
-    text-align: center;
-  }
-
-  .form-group {
-    margin-bottom: 15px;
-  }
-
-  label {
-    display: block;
-    font-size: 14px;
-    margin-bottom: 5px;
-  }
-
-  input[type="text"],
-  textarea {
+select{
     width: 100%;
-    padding: 10px;
-    border-radius: 5px;
-    border: 1px solid black;
-    font-size: 14px;
+    padding:12px;
+    background: transparent;
+    border: 2px solid black;
+    outline: none;
+    border-radius: 10px;
+    font-size: 15px;
     color: black;
-  }
-
-  input ::placeholder{
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+.la{
     color: black;
-  }
+    font-weight: bold;
+    font-size: 20px;
+}
+.Input {
+    position: relative;
+    height: 40px;
+    width: 100%;
+    border: 2px solid black;
+    color: black;
+    font-weight: bold;
+    font-size: 15px;
+    border-radius: 10px;
+}
 
-  textarea {
-    resize: none;
-    height: 100px;
-  }
-
-  .save-btn {
+.save-btn {
     display: block;
-    width: 100px;
+    width: 200px;
     padding: 8px;
     background-color: #1f5395;
     color: white;
     border: none;
     border-radius: 20px;
     font-size: 14px;
+    font-weight: bold;
+    font-size: 20px;
     cursor: pointer;
     margin: 10px auto 0;
   }
-  select{
-    width: 440px;
-    padding:12px;
-    background: transparent;
-    border: 2px solid black;
-    outline: none;
-    font-size: 15px;
+
+.Input ::placeholder {
     color: black;
     font-weight: bold;
-    margin-bottom: 20px;
+    font-size: 15px;
 }
