--- a/StyleSignUp.css
+++ b/StyleSignUp.css
@@ -1,16 +1,7 @@
 body {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
     margin: 0;
-    width: 100%;
-    height: 89.3vh;
     font-family: Arial, sans-serif;
     background-color: #f2f2f2;
-    background: url(car.png) no-repeat center center fixed;
-    background-size: cover;
-
 }
 .navbar {
     display: flex;
@@ -19,8 +10,6 @@ body {
     background-color: #f8f9fa;
     border-bottom: 1px solid #ccc;
     height: 50px;
-    width: 98.9%;
-    margin-right: 1100px;
 }
 
 .navbar a:first-of-type {
@@ -29,21 +18,17 @@ body {
 .navbar a {
     text-decoration: none;
     color: black;
-    margin: -300px 10px;
+    margin: 0 10px;
 }
-.navbar .log{
+.navbar .log {
     text-align: center;
     width: 80px;
     height: 30px;
     padding-top: 9px;
     align-items: center;
-    border:2px solid #378BA4;
+    border: 2px solid #378BA4;
     background-color: #378BA4;
     border-radius: 5px;
-}
-
-.navbar .log a{
-    padding-top: -30px;
 }
 
 .logo {
@@ -56,17 +41,16 @@ body {
     margin-left: -200px;
 }
 
-.her{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-    justify-content: center;
+.her {
     margin: 0;
     padding: 0;
     top: 0;
+    width: 100%;
+    height: 89.3vh;
+    background: url(car.png) no-repeat center center fixed;
+    background-size: cover;
     position: relative;
-
+    display: flex;
 }
 
 .gh{
@@ -96,9 +80,6 @@ body {
     width: 80%;
     margin: 50px 0;
 }
-
-
-
 
 
 .Input input{
