--- a/Style_dashboard.css
+++ b/Style_dashboard.css
@@ -8,7 +8,7 @@ header{
     padding: 10px;
     background-color: #f8f9fa;
     border-bottom: 1px solid #ccc;
-    height: 70px;
+    height: 90px;
     margin: -10px;
     width: 99.9%;
 }
@@ -23,16 +23,18 @@ header{
 }
 
 .user-section .names label{
-
+    font-size: 20px;
+    font-weight: bold;
     width: 50px;
     height: 50px;
 }
 
 .user-section img {
-    margin-left: 85px;
-    margin-top: -40px;
-    width: 50px;
-    height: 50px;
+    
+    margin-left: 270px;
+    margin-top: -60px;
+    width: 70px;
+    height: 70px;
     border-radius: 50%;
     background-color: #0d4da2;
     padding: 4px;
