--- a/StyleLogin.css
+++ b/StyleLogin.css
@@ -1,7 +1,9 @@
 body {
+    margin-top: 10px;
     margin: 0;
     font-family: Arial, sans-serif;
-    background-color: #f2f2f2;
+    background: url(car.png) no-repeat center center fixed;
+    background-size: cover;
 }
 .navbar {
     display: flex;
@@ -40,17 +42,6 @@ body {
     margin-left: -200px;
 }
 
-.her {
-    margin: 0;
-    padding: 0;
-    top: 0;
-    width: 100%;
-    height: 89.3vh;
-    background: url(car.png) no-repeat center center fixed;
-    background-size: cover;
-    position: relative;
-    display: flex;
-}
 
 .gh.active {
     display: block;
@@ -68,8 +59,8 @@ body {
     margin: 50px auto; 
     backdrop-filter: blur(50px);
     display: none;
-    position: absolute; /* Add this */
-    left: 50%; /* Add this */
+    position: absolute;
+    left: 50%;
     transform: translateX(-50%);
 }
 
