--- a/StyleSignUp.css
+++ b/StyleSignUp.css
@@ -1,7 +1,9 @@
 body {
+    margin-top: 10px;
     margin: 0;
     font-family: Arial, sans-serif;
-    background-color: #f2f2f2;
+    background: url(car.png) no-repeat center center fixed;
+    background-size: cover;
 }
 .navbar {
     display: flex;
@@ -39,18 +41,6 @@ body {
     background-repeat: no-repeat;
     background-position: center;
     margin-left: -200px;
-}
-
-.her {
-    margin: 0;
-    padding: 0;
-    top: 0;
-    width: 100%;
-    height: 89.3vh;
-    background: url(car.png) no-repeat center center fixed;
-    background-size: cover;
-    position: relative;
-    display: flex;
 }
 
 .gh{
