--- a/Style_ownerdash.css
+++ b/Style_ownerdash.css
@@ -32,6 +32,8 @@ header {
 }
 
 .user-section img {
+    margin-left: 50px;
+    margin-top: 0px;
     width: 70px;
     height: 70px;
     border-radius: 50%;
@@ -42,7 +44,6 @@ header {
 .user-section .names label {
     font-size: 20px;
     font-weight: bold;
-    margin-left: 11px;
 }
 
 
