--- a/Style_index.css
+++ b/Style_index.css
@@ -13,6 +13,8 @@ body {
     display: flex;
     align-items: center;
     padding: 10px;
+    width: 99%;
+    position: fixed;
     background-color: #f8f9fa;
     border-bottom: 1px solid #ccc;
     height: 50px;
@@ -85,13 +87,26 @@ body {
 
 .section_3 {
     min-height: 100vh;
-    padding: 100px 20px 20px;
+    font-weight: normal;
+    padding: 80px 20px 20px;
     display: flex;
+    margin: auto;
+    color: white;
+    background:    rgba(0, 0, 0, 0.76);
     flex-direction: column;
     justify-content: center;
     align-items: center;
     scroll-snap-align: start;
     box-sizing: border-box;
+}
+
+.section_3 .her h1{
+    font-size: 70px;
+}
+
+.section_3 .her  p{
+    font-size: 25px;
+    line-height: 1.5;
 }
 
 .her {
