--- a/Style_ownerdash.css
+++ b/Style_ownerdash.css
@@ -1,14 +1,3 @@
-
-body{
-
-    background:#3533cd;
-    background: linear-gradient(to right,
-    rgba(0,0,0,1) 10%,
-    rgb(38, 0, 255) 60%,
-    rgb(40, 3, 250) 80%,
-    rgb(0, 35, 236)) 100%;
-}
-
 body {
     background-color: #2b5b97;
     margin: 0;
@@ -21,7 +10,7 @@ header {
     padding: 10px 20px;
     background-color: #f8f9fa;
     border-bottom: 1px solid #ccc;
-    height: 90px;
+    height: 80px;
 }
 
 .user-section {
@@ -160,8 +149,8 @@ h2{
     margin-top: 50px;
     margin-left: auto;
     margin-right: auto;
-    width: max-content;
-    height: 650px;
+    width: 84%;
+    height: 78VH;
     background-color: #ededed;
     border-radius: 25px;
     overflow: scroll;
