--- a/Style_index.css
+++ b/Style_index.css
@@ -54,6 +54,8 @@ body {
     min-height: 100vh;
     padding: 100px 20px 20px;
     display: flex;
+    background-color: transparent;
+    backdrop-filter: blur(50px);
     flex-direction: column;
     justify-content: center;
     align-items: center;
