--- a/Style_index.css
+++ b/Style_index.css
@@ -54,6 +54,7 @@ body {
     min-height: 100vh;
     padding: 100px 20px 20px;
     display: flex;
+    color: black;
     background-color: transparent;
     backdrop-filter: blur(50px);
     flex-direction: column;
