--- a/Style_Cancel.css
+++ b/Style_Cancel.css
@@ -1,30 +1,147 @@
 body{
-    background-color: #2b5b97;
-    height: 870px;
+  background-color: #2b5b97;
+  margin: 0;
+  padding: 0;
 }
 
-header{
-    display: flex;
-    align-items: center;
-    padding: 10px;
-    background-color: #f8f9fa;
-    border-bottom: 1px solid #ccc;
-    height: 70px;
-    margin: -10px;
-    width: 99.9%;
+header {
+  display: flex;
+  align-items: center;
+  padding: 10px 20px;
+  background-color: #f8f9fa;
+  border-bottom: 1px solid #ccc;
+  height: 90px;
 }
 
+.user-section {
+  display: flex;
+  align-items: center;
+  margin-left: auto;
+  margin-right: 20px;
+}
+
+.user-section img {
+  margin-left: 50px;
+  margin-top: 0px;
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  background-color: #0d4da2;
+  padding: 4px;
+}
+
+.user-section .names label {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+#menuToggle {
+  position: fixed;
+  top: 30px;
+  left: 20px;
+  z-index: 1;
+  -webkit-user-select: none;
+  user-select: none;
+}
+
+  #menuToggle a {
+      text-decoration: none;
+      color: #232323;
+      transition: color 0.3s ease;
+  }
+
+      #menuToggle a:hover {
+          color: tomato;
+      }
+
+
+  #menuToggle input {
+      width: 40px;
+      height: 32px;
+      position: absolute;
+      top: -7px;
+      left: -5px;
+      cursor: pointer;
+      opacity: 0;
+      z-index: 2;
+      -webkit-touch-callout: none;
+  }
+
+  #menuToggle span {
+      display: block;
+      width: 33px;
+      height: 4px;
+      margin-bottom: 5px;
+      position: relative;
+      background: black;
+      border-radius: 3px;
+      z-index: 1;
+      transform-origin: 4px 0px;
+      transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0), background 0.5s cubic-bezier(0.77,0.2,0.05,1.0), opacity 0.55s ease;
+  }
+
+      #menuToggle span:first-child {
+          transform-origin: 0% 0%;
+      }
+
+      #menuToggle span:nth-last-child(2) {
+          transform-origin: 0% 100%;
+      }
+  #menuToggle input:checked ~ span {
+      opacity: 1;
+      transform: rotate(45deg) translate(-2px, -1px);
+      background: #232323;
+  }
+#menuToggle input:checked ~ span:nth-last-child(3) {
+  opacity: 0;
+  transform: rotate(0deg) scale(0.2, 0.2);
+}
+
+#menuToggle input:checked ~ span:nth-last-child(2) {
+  transform: rotate(-45deg) translate(0, -1px);
+}
+#menu {
+  max-width: 200px;
+  width: 100vw;
+  max-height: 100vh;
+  margin: -100px 0 0 -50px;
+  padding: 50px;
+  padding-top: 125px;
+  box-sizing: border-box;
+  background: #ededed;
+  list-style-type: none;
+  -webkit-font-smoothing: antialiased;
+  transform-origin: 0% 0%;
+  transform: translate(-100%, 0);
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+}
+
+#menu li {
+  padding: 10px 0;
+  font-size: 19px;
+  color: black;
+  font-weight: bold;
+}
+
+#menu li label {
+  cursor: pointer;
+  }
+
+#menuToggle input:checked ~ ul {
+  transform: none;
+}
 
 .logo {
-    height: 200px;
-    width: 600px;
-    top: 30px;
-    left: -500px;
-    background-image: url('WashWise-removebg-preview.png');
-    background-size: contain;
-    background-repeat: no-repeat;
-    margin-left: 0px;
+  height: 200px;
+  width: 600px;
+  top: 30px;
+  left: 20px;
+  background-image: url('WashWise-removebg-preview.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  margin-left: 50px;
 }
+
 
 .gh {
     width: 420px;
