--- a/Style_Ownercreate.css
+++ b/Style_Ownercreate.css
@@ -1,46 +1,68 @@
-body{
-    background-color: #2b5b97;
-    height: 870px;
-}
+body {
+    margin-top: 10px;
+    margin: 0;
+    font-family: Arial, sans-serif;
+    background: url(car.png) no-repeat center center fixed;
+    background-size: cover;
+}  
 
-header{
+body {
+    margin-top: 10px;
+    margin: 0;
+    font-family: Arial, sans-serif;
+    background: url(car.png) no-repeat center center fixed;
+    background-size: cover;
+}
+.navbar {
     display: flex;
     align-items: center;
     padding: 10px;
     background-color: #f8f9fa;
     border-bottom: 1px solid #ccc;
-    height: 70px;
-    margin: -10px;
-    width: 99.9%;
+    height: 50px;
 }
 
+.navbar a:first-of-type {
+    margin-left: auto;
+}
+.navbar a {
+    text-decoration: none;
+    color: black;
+    margin: 0 10px;
+}
+.navbar .log {
+    text-align: center;
+    width: 80px;
+    height: 30px;
+    padding-top: 9px;
+    align-items: center;
+    border: 2px solid #378BA4;
+    background-color: #378BA4;
+    border-radius: 5px;
+}
 
 .logo {
     height: 200px;
     width: 600px;
-    top: 30px;
-    left: -500px;
     background-image: url('WashWise-removebg-preview.png');
     background-size: contain;
     background-repeat: no-repeat;
-    margin-left: 0px;
+    background-position: center;
+    margin-left: -200px;
 }
 
-.gh {
-    width: 420px;
-    height: max-content;
-    background: white;
+.gh{
+    margin: 20px auto;
+    width: 420px ;
+    height: 90vh;
+    background:transparent;
     border: 2px solid black;
     color: black;
     border-radius: 10px;
-    padding: 30px 40px;
-    text-align: center;
-    align-self: center;
-    margin: 50px auto; 
+    padding: 0px 40px;
+    text-align: center; 
+    font-weight: bold;
     backdrop-filter: blur(50px);
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
 }
 
 .profile-photo {
@@ -75,28 +97,16 @@ header{
     border: 1px solid black;
     font-size: 14px;
     color: black;
+    background-color: transparent;
   }
-
-  input ::placeholder{
+  input::placeholder{
     color: black;
+    font-weight: bold;
   }
 
   textarea {
     resize: none;
     height: 100px;
-  }
-
-  .save-btn {
-    display: block;
-    width: 100px;
-    padding: 8px;
-    background-color: #1f5395;
-    color: white;
-    border: none;
-    border-radius: 20px;
-    font-size: 14px;
-    cursor: pointer;
-    margin: 10px auto 0;
   }
   select{
     width: 440px;
@@ -108,4 +118,60 @@ header{
     color: black;
     font-weight: bold;
     margin-bottom: 20px;
+}
+
+.gh .rem{
+    display:flex;
+    justify-content: space-between;
+    margin: 15px 0 15px;
+    font-weight: bold;
+    font-size: 15px;
+}
+
+
+
+.gh .rem a{
+    color: black;
+    text-decoration: none;
+}
+
+
+.gh .rem a:hover{ 
+    text-decoration: underline;
+}
+
+.gh .reg{
+    font-weight: bold;
+    font-size: 15px;
+}
+
+
+.gh .reg a{
+    color: black;
+    text-decoration: none;
+}
+
+
+.gh .reg a:hover{
+    text-decoration: underline;
+}
+
+
+.btn0 {
+    height: 45px;
+    width: 96%;
+    margin: 10px 0;
+    background:#378BA4;
+    outline: none;
+    border: 2px solid black;
+    border-radius: 40px;
+    display: block; 
+    font-weight: bold;
+    font-size: 20px;   
+  }
+
+  .button01 {
+    width: max-content;
+    display: flex;
+    justify-content: center;
 }
