--- a/Style_dash.css
+++ b/Style_dash.css
@@ -70,6 +70,7 @@ select{
     outline: none;
     border-radius: 10px;
     font-size: 15px;
+    text-align: center;
     color: black;
     font-weight: bold;
     margin-bottom: 20px;
