--- a/Style_ownerdash.css
+++ b/Style_ownerdash.css
@@ -156,6 +156,22 @@ h2{
     overflow: scroll;
 }
 
+.btn0 {
+    height: 45px;
+    width: 7%;
+    margin-left: 84%;
+    margin-top: 1%;
+    margin-bottom: -2%;
+    background:#0b14d6;
+    color: white;
+    outline: none;
+    border: 2px solid black;
+    border-radius: 40px;
+    display: block; 
+    font-weight: bold;
+    font-size: 20px;   
+}
+
 .customer{
     border: 1px solid black;
     margin: auto;
