--- a/Style_editown.css
+++ b/Style_editown.css
@@ -39,33 +39,31 @@ header {
     position: fixed;
     top: 30px;
     left: 20px;
-    z-index: 1;
-    -webkit-user-select: none;
+    z-index: 3;
     user-select: none;
 }
 
-    #menuToggle a {
-        text-decoration: none;
-        color: #232323;
-        transition: color 0.3s ease;
-    }
+#menuToggle a {
+    text-decoration: none;
+    color: #232323;
+    transition: color 0.3s ease;
+}
 
-        #menuToggle a:hover {
-            color: tomato;
-        }
+#menuToggle a:hover {
+    color: tomato;
+}
 
 
-    #menuToggle input {
-        width: 40px;
-        height: 32px;
-        position: absolute;
-        top: -7px;
-        left: -5px;
-        cursor: pointer;
-        opacity: 0;
-        z-index: 2;
-        -webkit-touch-callout: none;
-    }
+#menuToggle input {
+    width: 40px;
+    height: 32px;
+    position: absolute;
+    top: -7px;
+    left: -5px;
+    cursor: pointer;
+    opacity: 0;
+    z-index: 4;
+}
 
     #menuToggle span {
         display: block;
@@ -80,33 +78,34 @@ header {
         transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0), background 0.5s cubic-bezier(0.77,0.2,0.05,1.0), opacity 0.55s ease;
     }
 
-        #menuToggle span:first-child {
-            transform-origin: 0% 0%;
-        }
+#menuToggle span:first-child {
+    transform-origin: 0% 0%;
+}
 
-        #menuToggle span:nth-last-child(2) {
-            transform-origin: 0% 100%;
-        }
-    #menuToggle input:checked ~ span {
-        opacity: 1;
-        transform: rotate(45deg) translate(-2px, -1px);
-        background: #232323;
-    }
+#menuToggle span:nth-last-child(2) {
+    transform-origin: 0% 100%;
+}
+
+#menuToggle input:checked ~ span {
+    transform: rotate(45deg) translate(-2px, -1px);
+    background: #232323;
+}
+
 #menuToggle input:checked ~ span:nth-last-child(3) {
     opacity: 0;
-    transform: rotate(0deg) scale(0.2, 0.2);
+    transform: scale(0.2);
 }
 
 #menuToggle input:checked ~ span:nth-last-child(2) {
     transform: rotate(-45deg) translate(0, -1px);
 }
 #menu {
-    max-width: 200px;
-    width: 100vw;
-    max-height: 100vh;
-    margin: -100px 0 0 -50px;
-    padding: 50px;
-    padding-top: 125px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 200px;
+    height: 100vh;
+    padding: 125px 20px 20px 20px;
     box-sizing: border-box;
     background: #ededed;
     list-style-type: none;
@@ -130,6 +129,7 @@ header {
 #menuToggle input:checked ~ ul {
     transform: none;
 }
+
 
 .logo {
     height: 200px;
