--- a/Style_Custoedit.css
+++ b/Style_Custoedit.css
@@ -35,38 +35,36 @@ body{
     font-weight: bold;
   }
   
-  #menuToggle {
+#menuToggle {
     position: fixed;
     top: 30px;
     left: 20px;
-    z-index: 1;
-    -webkit-user-select: none;
+    z-index: 3;
     user-select: none;
-  }
-  
-    #menuToggle a {
-        text-decoration: none;
-        color: #232323;
-        transition: color 0.3s ease;
-    }
-  
-        #menuToggle a:hover {
-            color: tomato;
-        }
-  
-  
-    #menuToggle input {
-        width: 40px;
-        height: 32px;
-        position: absolute;
-        top: -7px;
-        left: -5px;
-        cursor: pointer;
-        opacity: 0;
-        z-index: 2;
-        -webkit-touch-callout: none;
-    }
-  
+}
+
+#menuToggle a {
+    text-decoration: none;
+    color: #232323;
+    transition: color 0.3s ease;
+}
+
+#menuToggle a:hover {
+    color: tomato;
+}
+
+
+#menuToggle input {
+    width: 40px;
+    height: 32px;
+    position: absolute;
+    top: -7px;
+    left: -5px;
+    cursor: pointer;
+    opacity: 0;
+    z-index: 4;
+}
+
     #menuToggle span {
         display: block;
         width: 33px;
@@ -79,34 +77,35 @@ body{
         transform-origin: 4px 0px;
         transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0), background 0.5s cubic-bezier(0.77,0.2,0.05,1.0), opacity 0.55s ease;
     }
-  
-        #menuToggle span:first-child {
-            transform-origin: 0% 0%;
-        }
-  
-        #menuToggle span:nth-last-child(2) {
-            transform-origin: 0% 100%;
-        }
-    #menuToggle input:checked ~ span {
-        opacity: 1;
-        transform: rotate(45deg) translate(-2px, -1px);
-        background: #232323;
-    }
-  #menuToggle input:checked ~ span:nth-last-child(3) {
+
+#menuToggle span:first-child {
+    transform-origin: 0% 0%;
+}
+
+#menuToggle span:nth-last-child(2) {
+    transform-origin: 0% 100%;
+}
+
+#menuToggle input:checked ~ span {
+    transform: rotate(45deg) translate(-2px, -1px);
+    background: #232323;
+}
+
+#menuToggle input:checked ~ span:nth-last-child(3) {
     opacity: 0;
-    transform: rotate(0deg) scale(0.2, 0.2);
-  }
-  
-  #menuToggle input:checked ~ span:nth-last-child(2) {
+    transform: scale(0.2);
+}
+
+#menuToggle input:checked ~ span:nth-last-child(2) {
     transform: rotate(-45deg) translate(0, -1px);
-  }
-  #menu {
-    max-width: 200px;
-    width: 100vw;
-    max-height: 100vh;
-    margin: -100px 0 0 -50px;
-    padding: 50px;
-    padding-top: 125px;
+}
+#menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 200px;
+    height: 100vh;
+    padding: 125px 20px 20px 20px;
     box-sizing: border-box;
     background: #ededed;
     list-style-type: none;
@@ -114,22 +113,23 @@ body{
     transform-origin: 0% 0%;
     transform: translate(-100%, 0);
     transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
-  }
-  
-  #menu li {
+}
+
+#menu li {
     padding: 10px 0;
     font-size: 19px;
     color: black;
     font-weight: bold;
-  }
-  
-  #menu li label {
+}
+
+#menu li label {
     cursor: pointer;
     }
-  
-  #menuToggle input:checked ~ ul {
+
+#menuToggle input:checked ~ ul {
     transform: none;
-  }
+}
+
   
   .logo {
     height: 200px;
